; ModuleID = '/home/carl/AnghaBench/libevent/extr_http.c_evhttp_request_set_on_complete_cb.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_http.c_evhttp_request_set_on_complete_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evhttp_request = type { void (%struct.evhttp_request*, i8*)*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @evhttp_request_set_on_complete_cb(%struct.evhttp_request* %0, void (%struct.evhttp_request*, i8*)* %1, i8* %2) #0 {
  %4 = alloca %struct.evhttp_request*, align 8
  %5 = alloca void (%struct.evhttp_request*, i8*)*, align 8
  %6 = alloca i8*, align 8
  store %struct.evhttp_request* %0, %struct.evhttp_request** %4, align 8
  store void (%struct.evhttp_request*, i8*)* %1, void (%struct.evhttp_request*, i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load void (%struct.evhttp_request*, i8*)*, void (%struct.evhttp_request*, i8*)** %5, align 8
  %8 = load %struct.evhttp_request*, %struct.evhttp_request** %4, align 8
  %9 = getelementptr inbounds %struct.evhttp_request, %struct.evhttp_request* %8, i32 0, i32 0
  store void (%struct.evhttp_request*, i8*)* %7, void (%struct.evhttp_request*, i8*)** %9, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load %struct.evhttp_request*, %struct.evhttp_request** %4, align 8
  %12 = getelementptr inbounds %struct.evhttp_request, %struct.evhttp_request* %11, i32 0, i32 1
  store i8* %10, i8** %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
